<?xml version="1.0"?>
<package format="3">
  <name>rf_meas_manager_interfaces</name>
  <version>0.1.0</version>
  <description>Messaggi custom per misure RF georeferenziate</description>

  <maintainer email="martj.na@outlook.com">Martina Callea</maintainer>
  <license>GPL-3.0-only</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <depend>builtin_interfaces</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>